# DataClimat

./: .gitignore  .python-version  README.md  app.py  app_creator.ipynb  create_co2_df.ipynb  essais_mobile.ipynb  ipcc_helpers.py  les données yes trop bien super la pluie.ipynb  new_app.py  pyproject.toml  requirements.txt
assets/: dashExtensions_default.js  typography.css
data/: Panel_b3_Simulated_temperature_change_at_4C.nc  Panel_c3_Simulated_precipitation_change_at_4C.nc  france.geojson
data/co2/: Carbon_dioxide_Gt_CO2_yr.csv  aggregated.csv
data/feux/: feux_inter.txt  feux_opti.txt  feux_pess.txt  feux_ref.txt
data/secheresse/: inter.txt  interH1.geojson  interH2.geojson  interH3.geojson  opti.txt  optiH1.geojson  optiH2.geojson  optiH3.geojson  pess.txt  pessH1.geojson  pessH2.geojson  pessH3.geojson  ref.txt  refREF.geojson
