[tool.poetry]
name = "dataclimat"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "> 3.7.11, <= 3.8.12"
dash = "^2.0.0"
dash-bootstrap-components = "^0.13.1"
dash-daq = "^0.5.0"
dash-leaflet = "^0.1.18"
pandas = "^1.3.3"
xarray = "^0.19.0"
dash-extensions = "^0.0.60"
jsbeautifier = "^1.14.0"
netCDF4 = "^1.5.7"

[tool.poetry.dev-dependencies]
typing-extensions = "^3.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
